# ferrolearn

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GAP-REPORT.md  README.md  index.md  phase-1-foundation.md  phase-2-classical-ml.md  phase-3-completeness.md
.crosslink/: driver-key.pub  hook-config.json
.design/: phase-0-coordinator.md  phase-1-foundation.md  phase-2-classical-ml.md  phase-3-completeness.md  phase-4-beyond-sklearn.md
checkpoint/: state.json
ferrolearn/: Cargo.toml  README.md
ferrolearn-bayes/: Cargo.toml  README.md
ferrolearn-bayes/proptest-regressions/: conjugate.txt
ferrolearn-bayes/src/: bernoulli.rs  categorical.rs  complement.rs  conjugate.rs  gaussian.rs  lib.rs  multinomial.rs
ferrolearn-bayes/tests/: api_proof.rs  oracle_tests.rs  proptest_invariants.rs
ferrolearn-bench/: Cargo.toml  README.md  compare.py  head_to_head.py  head_to_head_full.py  render_head_to_head.py  sklearn_bench.py
ferrolearn-bench/benches/: bayes.rs  classifiers.rs  clusterers.rs  decomposition.rs  kernel_methods.rs  kernel_regression.rs  metrics.rs  neighbors.rs  numerical.rs  regressors.rs  transformers.rs
ferrolearn-bench/reports/: baseline_v0.3.0.json  baseline_v0.3.0.md  h2h_final.json  h2h_final.md  h2h_full_v1.json  h2h_full_v1.md  h2h_full_v2_after_lsvc_fix.json  h2h_full_v2_after_lsvc_fix.md  h2h_full_v3_after_kr_ada_fix.json  h2h_full_v3_after_kr_ada_fix.md  h2h_full_v4_after_gmm_mbkm_fix.json  h2h_full_v4_after_gmm_mbkm_fix.md  h2h_full_v5_after_cluster_fixes.json  h2h_full_v5_after_cluster_fixes.md  post_rf_fix.json  post_rf_fix.md
ferrolearn-bench/src/: lib.rs
ferrolearn-cluster/: Cargo.toml  README.md
ferrolearn-core/: Cargo.toml
ferrolearn-core/src/: backend_faer.rs  lib.rs  pipeline.rs  typed_pipeline.rs
ferrolearn-core/tests/: api_proof.rs
ferrolearn-core/tests/compile_fail/: predict_unfitted_kmeans.stderr
ferrolearn-covariance/: Cargo.toml  README.md
ferrolearn-covariance/src/: covariance.rs  graphical_lasso.rs  helpers.rs  lib.rs
ferrolearn-covariance/tests/: api_proof.rs
ferrolearn-datasets/: Cargo.toml
ferrolearn-datasets/src/: generators.rs  lib.rs  svmlight.rs  toy.rs
ferrolearn-datasets/tests/: api_proof.rs
ferrolearn-decomp/: Cargo.toml  README.md
ferrolearn-fetch/: Cargo.toml  README.md
ferrolearn-fetch/src/: cache.rs  california_housing.rs  covtype.rs  fetch.rs  kddcup99.rs  lib.rs  newsgroups.rs  openml.rs
ferrolearn-fetch/tests/: api_proof.rs
ferrolearn-io/: Cargo.toml
ferrolearn-io/src/: lib.rs
ferrolearn-io/tests/: api_proof.rs
ferrolearn-kernel/: Cargo.toml  README.md
ferrolearn-kernel/src/: bandwidth.rs  confidence.rs  gaussian_process.rs  gp_classifier.rs  gp_kernels.rs  hat_matrix.rs  kernel_ridge.rs  kernels.rs  lib.rs  local_polynomial.rs  nadaraya_watson.rs  nystroem.rs  rbf_sampler.rs  weights.rs
ferrolearn-kernel/tests/: accuracy_comparison.rs  adversarial_tests.rs  api_proof.rs  proptest_invariants.rs
ferrolearn-linear/: Cargo.toml  README.md
ferrolearn-metrics/: Cargo.toml
ferrolearn-model-sel/: Cargo.toml
ferrolearn-neighbors/: Cargo.toml  README.md
ferrolearn-neural/: Cargo.toml  README.md
ferrolearn-neural/src/: lib.rs  mlp.rs  rbm.rs
ferrolearn-neural/tests/: api_proof.rs
ferrolearn-numerical/: BENCHMARKS.md  Cargo.toml  bench_scipy.py
ferrolearn-numerical/src/: distributions.rs  integrate.rs  interpolate.rs  lib.rs  optimize.rs  sparse_eig.rs  sparse_graph.rs  special.rs
ferrolearn-numerical/tests/: accuracy_vs_scipy.rs  api_proof.rs  oracle_tests.rs
ferrolearn-preprocess/: Cargo.toml  README.md
ferrolearn-preprocess/src/: binarizer.rs  column_transformer.rs  count_vectorizer.rs  feature_scoring.rs  feature_selection.rs  function_transformer.rs  imputer.rs  iterative_imputer.rs  kbins_discretizer.rs  knn_imputer.rs  label_binarizer.rs  label_encoder.rs  lib.rs  max_abs_scaler.rs  min_max_scaler.rs  multi_label_binarizer.rs  normalizer.rs  polynomial_features.rs  power_transformer.rs  quantile_transformer.rs  random_projection.rs  rfe.rs  robust_scaler.rs  select_from_model.rs  sequential_feature_selector.rs  spline_transformer.rs  standard_scaler.rs  stat_selectors.rs  target_encoder.rs  tfidf.rs
ferrolearn-preprocess/tests/: api_proof.rs  oracle_tests.rs
ferrolearn-python/: Cargo.toml  README.md  pyproject.toml
ferrolearn-python/python/ferrolearn/: __init__.py  _classifiers.py  _clusterers.py  _extras.py  _regressors.py  _transformers.py
ferrolearn-python/src/: classifiers.rs  clusterers.rs  conversions.rs  extras.rs  lib.rs  regressors.rs  transformers.rs
ferrolearn-python/tests/: test_check_estimator.py  test_cross_val_score.py
ferrolearn-sparse/: Cargo.toml
ferrolearn-sparse/src/: coo.rs  csc.rs  csr.rs  helpers.rs  lib.rs
ferrolearn-sparse/tests/: api_proof.rs
ferrolearn-tree/: Cargo.toml  README.md
fixtures/: bernoulli_nb.json  binarizer.json  birch.json  clustering_metrics.json  complement_nb.json  cubic_spline.json  distributions.json  gaussian_mixture.json  kbins_discretizer.json  label_encoder.json  log_loss.json  max_abs_scaler.json  mean_shift.json  mini_batch_kmeans.json  multinomial_nb.json  normalizer.json  one_hot_encoder.json  optics.json  polynomial_features.json  power_transformer.json  quantile_transformer.json  regression_metrics_extended.json  roc_auc.json  simple_imputer.json  sparse_eigsh.json  spectral_clustering.json  stratified_kfold.json  time_series_split.json
heartbeats/: doll-agent.json
issues/: 6b5b1695-0285-4df8-8a46-66fc410d13de.json  9bf702c4-84ac-47ff-ae8e-025677fa2017.json  e9f870ca-cf44-444c-aa80-ce5f32fd8597.json  f5d86c48-0777-4c07-8178-e479ab422d37.json
locks/: 235.json  236.json  237.json  239.json  240.json  241.json  242.json  243.json  244.json  245.json  246.json  247.json  248.json  249.json  250.json  251.json  252.json  253.json  254.json  255.json  260.json  261.json  262.json  263.json  264.json  265.json  266.json  267.json  268.json  269.json  270.json  271.json  272.json  275.json  277.json  278.json  279.json  280.json  281.json  282.json  (+46 more)
(+598 files in other folders)
