[package]
name = "ferrolearn-bayes"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bayesian methods for the ferrolearn ML framework — naive Bayes classifiers and conjugate priors"
readme = "README.md"
keywords = ["machine-learning", "naive-bayes", "bayesian", "conjugate-prior", "statistics"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
proptest = "1"
