[package]
name = "ferrolearn-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ferrolearn-core.workspace = true
ferrolearn-linear.workspace = true
ferrolearn-tree.workspace = true
ferrolearn-neighbors.workspace = true
ferrolearn-bayes.workspace = true
ferrolearn-cluster.workspace = true
ferrolearn-decomp.workspace = true
ferrolearn-preprocess.workspace = true
ferrolearn-metrics.workspace = true
ferrolearn-datasets.workspace = true
ndarray.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "regressors"
harness = false

[[bench]]
name = "classifiers"
harness = false

[[bench]]
name = "transformers"
harness = false

[[bench]]
name = "clusterers"
harness = false

[[bench]]
name = "metrics"
harness = false
