[package]
name = "ferrolearn-bench"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
ferrolearn-core.workspace = true
ferrolearn-linear.workspace = true
ferrolearn-tree.workspace = true
ferrolearn-neighbors.workspace = true
ferrolearn-bayes.workspace = true
ferrolearn-cluster.workspace = true
ferrolearn-decomp.workspace = true
ferrolearn-preprocess.workspace = true
ferrolearn-metrics.workspace = true
ferrolearn-model-sel.workspace = true
ferrolearn-datasets.workspace = true
ferrolearn-kernel.workspace = true
ferrolearn-numerical.workspace = true
ferrolearn-covariance.workspace = true
ndarray.workspace = true
sprs.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "regressors"
harness = false

[[bench]]
name = "classifiers"
harness = false

[[bench]]
name = "transformers"
harness = false

[[bench]]
name = "clusterers"
harness = false

[[bench]]
name = "metrics"
harness = false

[[bench]]
name = "kernel_regression"
harness = false

[[bench]]
name = "numerical"
harness = false

[[bench]]
name = "neighbors"
harness = false

[[bench]]
name = "bayes"
harness = false

[[bench]]
name = "decomposition"
harness = false

[[bench]]
name = "kernel_methods"
harness = false

[[bin]]
name = "harness"
path = "src/bin/harness.rs"
