[package]
name = "ferrolearn-core"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits, error types, and pipeline for the ferrolearn ML framework"
readme = "README.md"
keywords = ["machine-learning", "traits", "pipeline", "ml", "ferrolearn"]
categories = ["science", "algorithms"]

[dependencies]
faer = { workspace = true, optional = true }
ndarray.workspace = true
ndarray-linalg = { version = "0.18", features = ["openblas-static"], optional = true }
num-traits.workspace = true
thiserror = { version = "2.0", default-features = false }

[dev-dependencies]
approx.workspace = true
trybuild.workspace = true
ferrolearn-linear.workspace = true
ferrolearn-preprocess.workspace = true
ferrolearn-decomp.workspace = true
ferrolearn-cluster.workspace = true

[features]
default = ["std", "faer"]
std = ["thiserror/std"]
faer = ["dep:faer"]
blas = ["dep:ndarray-linalg"]
