[package]
name = "ferrolearn-covariance"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Covariance estimation for the ferrolearn ML framework"
readme = "README.md"
keywords = ["machine-learning", "covariance", "ledoit-wolf", "graphical-lasso", "mcd"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
ndarray.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_xoshiro.workspace = true

[dev-dependencies]
approx.workspace = true
