[package]
name = "ferrolearn-fetch"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Network fetchers + on-disk cache for sklearn-style datasets (California housing, OpenML, 20newsgroups, etc.)"
readme = "README.md"
keywords = ["machine-learning", "datasets", "openml", "fetch", "cache"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
ferrolearn-datasets.workspace = true
ndarray.workspace = true
serde_json.workspace = true
ureq = { version = "3", default-features = false, features = ["rustls", "gzip"] }
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
dirs = "5"

[dev-dependencies]
approx.workspace = true
