[package]
name = "ferrolearn-kernel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Kernel regression for the ferrolearn ML framework"
readme = "README.md"
keywords = ["machine-learning", "kernel-regression", "nadaraya-watson", "nonparametric", "bandwidth"]
categories = ["science", "algorithms"]

[dependencies]
faer = { workspace = true }
ferrolearn-core = { workspace = true }
ferrolearn-neighbors = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_xoshiro = { workspace = true }
statrs = "0.18"

[dev-dependencies]
approx = { workspace = true }
float-cmp = { workspace = true }
ferrolearn-metrics = { workspace = true }
serde_json = { workspace = true }
rand_xoshiro = { workspace = true }
proptest = "1"
