[package]
name = "ferrolearn-preprocess"
version = "0.2.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Preprocessing transformers for the ferrolearn ML framework"
repository.workspace = true
readme = "README.md"
keywords = ["machine-learning", "preprocessing", "scaler", "encoder", "feature-engineering"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
ferrolearn-numerical.workspace = true
ndarray.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_distr.workspace = true

[dev-dependencies]
approx.workspace = true
float-cmp.workspace = true
serde_json.workspace = true
proptest = "1"
